# web-capture

./: .gitignore  .gitkeep  .lenv  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  jest.config.mjs  package-lock.json  package.json
.changeset/: add-kreuzberg-html-to-markdown.md  add-related-resources.md  browser-commander-integration.md  ci-cd-pipeline.md  fix-npm-package-name.md
ci-logs/: js-template-tree.txt
docs/: formalai-contract.md  html-to-markdown-integration.md  market-analysis-2025-05-13.md
experiments/: gdocs-model-debug.mjs  heading_img_bug.rs  issue-100-dump-gdocs-model.mjs  issue-108-analyze-gdocs-model.mjs  issue-116-html2md-empty-title.rs  repro-br-li.mjs  repro-br-paragraph.mjs  repro-br-pipeline.mjs  repro-br-variations.mjs  test-detect-changes.mjs  test-publish-verification.mjs  test-release-badge-encoding.mjs  (+5 more)
rust/: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
rust/examples/: test_renumbering.rs
rust/src/: animation.rs  archive.rs  batch.rs  browser.rs  extract_images.rs  figures.rs  gdocs.rs  github.rs  html.rs  kreuzberg.rs  latex.rs  lib.rs  localize_images.rs  main.rs  markdown.rs  metadata.rs  postprocess.rs  search.rs  stackoverflow.rs  themed_image.rs  verify.rs  xpaste.rs
rust/tests/: batch_tests.rs  browser_tests.rs  extract_images_tests.rs  gdocs_tests.rs  html_tests.rs  kreuzberg_tests.rs  latex_tests.rs  lib_tests.rs  metadata_tests.rs  postprocess_tests.rs  verify_tests.rs
rust/tests/fixtures/: bold-coalesce-and-leakage.html  heading-numbering.html  list-item-with-br.html  paragraph-vs-line-break.html
rust/tests/integration/: animation.rs  archive_default_layout.rs  batch.rs  bold_coalesce_and_leakage.rs  browser.rs  extract_images_with_title.rs  figures.rs  formalai_contract.rs  gdocs.rs  gdocs_image_parity.rs  gdocs_public_doc.rs  gdocs_tests.rs  github_repository.rs  heading_numbering.rs  html2md_br_in_list_item.rs  html2md_ol_numbering.rs  image_mode_defaults.rs  kreuzberg.rs  markdown_no_empty_title.rs  mod.rs  paragraph_vs_line_break.rs  search.rs  stackoverflow_download.rs  strip_base64_empty_alt.rs  themed_image.rs  wikipedia_download.rs  xpaste.rs
rust/tests/unit/: extract_images.rs  extract_images_tests.rs  github.rs  html.rs  html_tests.rs  lib_api.rs  localize_images.rs  markdown.rs  mod.rs  postprocess.rs
(+413 files in other folders)
